samples/_failures_safe/1761259004_ba25ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_939e8771.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_939e8771.c:168:9: error: expected declaration or statement at end of input
  168 |         case TOKEN_ERROR: return "ERROR";
      |         ^~~~
./samples/SAFE/__tmp_939e8771.c:168:9: error: expected declaration or statement at end of input
